third_party/rust/chromium_crates_io/vendor/cxx-1.0.135/tests/ui/vec_opaque.stderr
error: Rust Vec containing C++ type is not supported yet
  --> tests/ui/vec_opaque.rs:15:19
   |
15 |         fn f() -> Vec<Job>;
   |                   ^^^^^^^^

error: needs a cxx::ExternType impl in order to be used as a vector element in Vec<Job>
  --> tests/ui/vec_opaque.rs:11:9
   |
11 |         type Job;
   |         ^^^^^^^^

error[E0271]: type mismatch resolving `<Job as ExternType>::Kind == Trivial`
  --> tests/ui/vec_opaque.rs:22:14
   |
22 |         type Job = crate::handle::Job;
   |              ^^^ expected `Trivial`, found `Opaque`
   |
note: required by a bound in `verify_extern_kind`
  --> src/extern_type.rs
   |
   | pub fn verify_extern_kind<T: ExternType<Kind = Kind>, Kind: self::Kind>() {}
   |                                         ^^^^^^^^^^^ required by this bound in `verify_extern_kind`
